2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03406]
	* scripts/Makefile: add AUXBIN_DIR
			update LIB_DIR, HELP_DIR
			xface2xpm installed in AUXBIN_DIR
	* scripts/multipart/Makefile: update LIB_DIR
	* scripts/w3mman/Makefile: update LIB_DIR

2002-11-12  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03405] Re: tab browser
	* main.c (moveTab): B_FORCE_REDRAW

2002-11-10  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03401] w3mhelp.cgi
	* proto.h (tabMn): nulcmd ifndef USE_MENU
	* scripts/w3mhelp-funcdesc.en.pl.in: add LINEEDIT:EDITOR
	* scripts/w3mhelp-funcdesc.ja.pl.in: add LINEEDIT:EDITOR
					Tab operation
	* scripts/w3mhelp-funcname.pl.in: add LINEEDIT:EDITOR C-o
	* scripts/w3mhelp.cgi.in: add tabA in Hyperlink operation
				add tabURL, tabrURL in File/Stream operation
				add Tab operation
				add lineedit_editor in Line edit mode
	
2002-11-10  NOMIYA Masaru <nomiya@ttmy.ne.jp>

	* [w3m-dev 03399]
	* XMakefile: ;; -> ;

2002-11-10  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03398] auxbindir
	* XMakefile: EXT_TARGETS -> LIB_TARGETS, AUXBIN_TARGETS
	* config.h.dist: add AUXBIN_DIR
			LIB_DIR is cgi-bin
	* configure: add -auxbindir
			add AUXBIN_DIR
			LIB_DIR is cgi-bin
			EXT_TARGETS -> LIB_TARGETS, AUXBIN_TARGETS
	* file.c (compression_decoder): libfile_p -> auxbin_p
		(check_command): libfile_p -> auxbin_p
				use w3m_auxbin_dir() instead of w3m_lib_dir()
		(acceptableEncoding): libfile_p -> auxbin_p
		(xface2xpm): use auxbinFile() instead of libFile()
		(uncompress_stream): libfile_p -> auxbin_p
				use auxbinFile() instead of libFile()
	* image.c (getCharSize): use w3m_auxbin_dir() instead of w3m_lib_dir()
		(openImgdisplay): use w3m_auxbin_dir() instead of w3m_lib_dir()
	* indep.c (w3m_auxbin_dir): added
	* indep.h (w3m_auxbin_dir): added
	* proto.h (auxbinFile): added
	* rc.c (auxbinFile): added
		(libFile): #if 0, no longer used
		(helpFile): used only #ifndef USE_HELP_CGI